--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body-home{
-    background-image: url(images/new\ background.jpg);
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4jhzq_ztXLxnk3QB8mDgCDL7F1Grv3YAPog&usqp=CAU);
 }
 
 .menu-wrapper {
